# openbtk-core

./: .gitignore  .pre-commit-config.yaml  README.md  architecture.txt  deploy_to_github.bat  publish_to_pypi.bat  pyproject.toml  setup.py  test_pipeline.py
.github/workflows/: ci.yml
openbtk/: __init__.py  models.py
openbtk.egg-info/: PKG-INFO
openbtk/core/: ingester.py
openbtk/encoders/: multimodal_encoder.py  text_encoder.py
openbtk/processors/: audio_processor.py  image_processor.py  text_processor.py
src/: __init__.py
src/core/: __init__.py  base.py  config.py  errors.py  logging.py  plugins.py  registry.py  schemas.py
tests/: conftest.py
tests/fixtures/: synthetic_ehr.py  synthetic_text.py
tests/integration/: test_clinical_text_pipeline.py
tests/unit/core/: test_config.py  test_errors.py  test_plugins.py  test_registry.py
